--- a/documentation/observable.html
+++ b/documentation/observable.html
@@ -292,18 +292,18 @@
 <p>This documentation groups information about <a href="/observables/alphabetical.html">the various operators</a> and examples of their usage into the following pages (these are also listed in the sidebar):</p>
 
 <ul>
-<li><a href="/observables/creating.html">Creating</a></li>
-<li><a href="/observables/transforming.html">Transforming</a></li>
-<li><a href="/observables/filtering.html">Filtering</a></li>
-<li><a href="/observables/combining.html">Combining</a></li>
-<li><a href="/observables/error-handling.html">Error Handling</a></li>
-<li><a href="/observables/utilities.html">Utility</a></li>
-<li><a href="/observables/conditionals.html">Conditional and Boolean</a></li>
-<li><a href="/observables/mathematical.html">Mathematical and Aggregate</a></li>
-<li><a href="/observables/async.html">Asynchronous Conversion</a></li>
-<li><a href="/observables/connectable.html">Connectable Observables</a></li>
-<li><a href="/observables/blocking.html">Blocking Observables</a></li>
-<li><a href="/observables/string.html">String Observables</a></li>
+<li><a href="/documentation/creating.html">Creating</a></li>
+<li><a href="/documentation/transforming.html">Transforming</a></li>
+<li><a href="/documentation/filtering.html">Filtering</a></li>
+<li><a href="/documentation/combining.html">Combining</a></li>
+<li><a href="/documentation/error-handling.html">Error Handling</a></li>
+<li><a href="/documentation/utilities.html">Utility</a></li>
+<li><a href="/documentation/conditionals.html">Conditional and Boolean</a></li>
+<li><a href="/documentation/mathematical.html">Mathematical and Aggregate</a></li>
+<li><a href="/documentation/async.html">Asynchronous Conversion</a></li>
+<li><a href="/documentation/connectable.html">Connectable Observables</a></li>
+<li><a href="/documentation/blocking.html">Blocking Observables</a></li>
+<li><a href="/documentation/string.html">String Observables</a></li>
 </ul>
 
 <p>These pages include information about some operators that are not part of the core of RxJava but are implemented in a variety of contributed modules that you must include separately as part of your project.</p>
