--- a/documentation/operators/skip.html
+++ b/documentation/operators/skip.html
@@ -126,7 +126,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJS skip %}
+  {% lang_operator RxJS skip skipUntilWithTime %}
      <figure>
       <img src="images/skip.png" width="640" alt="skip" />
       <figcaption><p>
@@ -153,6 +153,49 @@ Completed</pre></div>
        <li><code>rx.all.js</code></li>
        <li><code>rx.all.compat.js</code></li>
        <li><code>rx.compat.js</code></li>
+       <li><code>rx.lite.js</code></li>
+       <li><code>rx.lite.compat.js</code></li>
+      </ul>
+      </figcaption>
+     </figure>
+     <figure>
+      <img src="images/skipUntilWithTime.png" width="640" alt="skipUntilWithTime" />
+      <figcaption><p>
+       RxJS also implements a <code>skipUntilWithTime</code> operator that does not skip a particular quantity
+       of items from the source Observable, but skips items based on chronology. You set this skip period by
+       passing in a parameter to <code>skipUntilWithTime</code>, in either of these formats:
+      </p>
+      <dl>
+       <dt>a number</dt>
+        <dd>skips items from the source Observable until this many milliseconds have passed since the Observable was subscribed to</dd>
+       <dt>a <code>Date</code></dt>
+        <dd>skips items from the source Observable until this absolute time</dd>
+      </dl>
+      <p>
+       You may also, optionally, pass in a Scheduler as a second parameter, and the timer will operate on that
+       Scheduler (<code>skipUntilWithTime</code> uses the <code>timeout</code> Scheduler by default).
+      </p>
+      <h4>Sample Code</h4>
+      <div class="code javascript"><pre>
+var source = Rx.Observable.timer(0, 1000)
+    .skipUntilWithTime(5000);
+
+var subscription = source.subscribe(
+    function (x) { console.log('Next: ' + x); },
+    function (err) { console.log('Error: ' + err); },
+    function () { console.log('Completed'); });</pre></div>
+      <div class="output"><pre>
+Next: 6
+Next: 7
+Next: 8
+Completed</pre></div>
+      <p>
+       <code>skipUntilWithTime</code> is found in each of the following distributions:
+      </p>
+      <ul>
+       <li><code>rx.all.js</code></li>
+       <li><code>rx.all.compat.js</code></li>
+       <li><code>rx.time.js</code> (requires <code>rx.js</code> or <code>rx.compat.js</code>)</li>
        <li><code>rx.lite.js</code></li>
        <li><code>rx.lite.compat.js</code></li>
       </ul>
