--- a/documentation/operators/skipwhile.html
+++ b/documentation/operators/skipwhile.html
@@ -29,7 +29,7 @@ id: skipWhile
     <li><a href="skipuntil.html"><span class="operator">SkipUntil</span></a></li>
     <li><a href="take.html"><span class="operator">Take</span></a></li>
     <li><a href="takelast.html"><span class="operator">TakeLast</span></a></li>
-    <li><a href="takeuntil.html"><span class="operator">TakeWhile</span></a></li>
+    <li><a href="takeuntil.html"><span class="operator">TakeUntil</span></a></li>
     <li><a href="takewhile.html"><span class="operator">TakeWhile</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/05_Filtering.html#SkipWhileTakeWhile"><cite>Introduction to Rx</cite>: SkipWhile and TakeWhile</a></li>
    </ul>
