--- a/documentation/operators/scan.html
+++ b/documentation/operators/scan.html
@@ -29,7 +29,7 @@ id: scan
 
    <h4>See Also</h4>
    <ul>
-    <li><a href="reduce"><span class="operator">Reduce</span></a></li>
+    <li><a href="reduce.html"><span class="operator">Reduce</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#Scan"><cite>Introduction to Rx</cite>: Scan</li>
    </ul>
 
@@ -126,7 +126,7 @@ Sequence complete</pre></div>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxJS scan %}
+  {% lang_operator RxJS expand scan %}
      <figure>
       <img src="images/scan.png" width="640" alt="scan" />
       <figcaption><p>
@@ -187,6 +187,48 @@ Completed</pre></div></figcaption>
       <li><code>rx.lite.js</code></li>
       <li><code>rx.lite.compat.js</code></li>
      </ul>
+     <figure>
+      <img src="images/expand.png" width="640" alt="expand" />
+      <figcaption><p>
+       RxJS also implements the <code>expand</code> operator, which is somewhat similar. Rather than applying
+       the function to the previous return value of the function combined with the next item emitted from the
+       source Observable, such that the number of items it emits is equal to the number emitted by the source
+       Observable, <code>expand</code> simply feeds the return value from the function back into the function
+       without regard to future emissions from the Observable, such that it will just continue to create new
+       values at its own pace.
+      </p>
+      <h4>Sample Code</h4>
+      <div class="code javascript"><pre>
+var source = Rx.Observable.return(42)
+    .expand(function (x) { return Rx.Observable.return(42 + x); })
+    .take(5);
+
+var subscription = source.subscribe(
+    function (x) { console.log('Next: ' + x); },
+    function (err) { console.log('Error: ' + err); },
+    function () { console.log('Completed'); });</pre></div>
+      <div class="output"><pre>
+Next: 42
+Next: 84
+Next: 126
+Next: 168
+Next: 210
+Completed</pre></div>
+      <p><code>expand</code> is found in each of the following distributions:</p>
+      <ul>
+       <li><code>rx.all.js</code></li>
+       <li><code>rx.all.compat.js</code></li>
+       <li><code>rx.experimental.js</code></li>
+      </ul>
+      <p><code>expand</code> requires one of the following distributions:</p>
+      <ul>
+       <li><code>rx.js</code></li>
+       <li><code>rx.compat.js</code></li>
+       <li><code>rx.lite.js</code></li>
+       <li><code>rx.lite.compat.js</code></li>
+      </ul>
+      </figcaption>
+     </figure>
   {% endlang_operator %}
 
   {% lang_operator RxKotlin scan %}
